projects/raspberry_kube/infra/ngrok/ngrok_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher
  namespace: cattle-system
spec:
  ingressClassName: ngrok
  rules:
    - host: "nonlimitative-vina-subquinquefid.ngrok-free.app"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rancher
                port:
                  number: 80
